<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarNota">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        
        <TextView
            android:id="@+id/NombreUsuaruiNota"
            android:layout_width= "match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NombreUsuarioNota"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/CorreoUsuarioNota"
            android:layout_width= "match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CorreoUsuarioNota"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/Fecha_hora"
            android:layout_width= "match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fecha_hora"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/Titulo"
            android:hint="@string/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/Descripcion"
            android:hint="@string/DescripcionNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:minHeight="150dp"
            android:gravity="start"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Btn_calendario"
                android:text="@string/Btn_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/icono_calendario"/>

            <TextView
                android:id="@+id/Fecha"
                android:hint="@string/Fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/AgregarNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/AgregarNota"
            app:icon="@drawable/icono_agregarnota"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>