<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IniciarSesion"
            android:textSize="25sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_fileName="Login.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/CorreoLogin"
                android:id="@+id/CorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:drawableStart="@drawable/icono_password"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:padding="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btn_iniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_iniciar"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/UsuarioNuevo"
            android:text="@string/UsuarioNuevo"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>