<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/colorPrimario"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BienvenidoUs"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>

                <ProgressBar

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Progress_datos"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/NombreMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NombreMenu"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/CorreoMenu"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CorreoMEnu"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="4dp"
                android:padding="0.2dp"
                app:cardCornerRadius="5dp">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/imagen1"
                        android:scaleType="fitCenter"
                        android:background="@color/white"/>

                    <Button
                        android:id="@+id/CrearNota"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="25sp"
                        android:text="@string/TituloNota"
                        android:layout_gravity="bottom"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/colorPrimario"
                        android:padding="10dp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:cardUseCompatPadding="true"
                android:padding="0.2dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorSecundarioClaro"
                app:cardCornerRadius="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/bloc"
                        android:scaleType="fitCenter"
                        android:background="@color/white"/>

                    <Button
                        android:id="@+id/verNotas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="25sp"
                        android:text="@string/VerNotas"
                        android:layout_gravity="bottom"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/colorPrimario"
                        android:padding="10dp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="250dp">
            <Button
                android:id="@+id/CerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/CerrarSesion"
                android:backgroundTint="@color/colorPrimario"
                android:textColor="@color/black"
                android:layout_gravity="bottom"/>

        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>